--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+
 .cursor {
   cursor: pointer;
 }
@@ -21,4 +22,12 @@
 
 .wide {
   width: 100%;
+}
+
+.left-scroll-bar {
+  direction: rtl;
+}
+
+.left-scroll-bar * {
+  direction: ltr;
 }
